--- a/client_phone/style.css
+++ b/client_phone/style.css
@@ -1,13 +1,18 @@
-body
+.container
 {
     display: flex;
     margin: 0 auto;
     width: 600px;
-    height: 800px;  
+    height: 400px;  
     justify-content: space-between;
 }
 button
 {
-    height: 50%;
+    height: 100%;
     width: 50%;
+}
+#status
+{
+    height: 500px;
+    width: 600px;
 }
